--- a/closures.html
+++ b/closures.html
@@ -4,7 +4,7 @@
    function paint(type,color){
    	var str="The " + type + "is " + color;
    	var tellme=function(){
-   		document.write("<big>" + str + ".</big><br/>")
+   		document.write("<big> The big is" + str + ".</big><br/>")
    	}
    	return tellme;
    }
